add swagger info and expire time
