# pkg/apiserver/controller/AuthController.go
@@ -7,6 +7,7 @@ import (
 	"github.com/hwameistor/hwameistor/pkg/apiserver/manager"
 	log "github.com/sirupsen/logrus"
 	"net/http"
+	"time"
 )
 
 type IAuthController interface {
@@ -24,6 +25,16 @@ func NewAuthController(m *manager.ServerManager) IAuthController {
 	return &AuthController{m, map[string]struct{}{}}
 }
 
+// Auth godoc
+// @Summary     Authorization
+// @Description Authorize user, return a token if success
+// @Tags        Auth
+// @Param       access_id query string true "id"
+// @Param       secret_key query string true "key"
+// @Accept      application/json
+// @Produce     application/json
+// @Success     200 {object} api.AuthRspBody
+// @Router      /cluster/auth/auth [post]
 func (n *AuthController) Auth(ctx *gin.Context) {
 	var req api.AuthReqBody
 	if err := ctx.ShouldBind(&req); err != nil {
@@ -46,6 +57,14 @@ func (n *AuthController) Auth(ctx *gin.Context) {
 	})
 }
 
+// Logout godoc
+// @Summary     Logout the token
+// @Description Logout the token, if verify token success, delete this token and return success
+// @Tags        Auth
+// @Accept      application/json
+// @Produce     application/json
+// @Success     200 {object} api.LogoutRspBody
+// @Router      /cluster/auth/logout [post]
 func (n *AuthController) Logout(ctx *gin.Context) {
 	token := ctx.Request.Header.Get(api.AuthTokenHeaderName)
 	if n.verifyToken(token) {
@@ -67,6 +86,10 @@ func (n *AuthController) Logout(ctx *gin.Context) {
 func (n *AuthController) generateToken() string {
 	token := uuid.New().String()
 	n.tokens[token] = struct{}{}
+	// token expire
+	time.AfterFunc(api.AuthTokenExpireTime, func() {
+		n.deleteToken(token)
+	})
 	return token
 }
 
